syntax = "proto3";

package vaultron.common.v1;

message StatusCode {
  bool                success             = 1;
  optional string     error_message       = 2; 
  oneof error {
    EnclaveError      enclave_error       = 3;
    EnclaveAgentError enclave_agent_error = 4;
    CoordinatorError  coordinator_error   = 5;
  }
}

enum EnclaveError {
  ENCLAVE_ERROR_UNSPECIFIED                        = 0;
  ENCLAVE_ERROR_UNKNOWN_ERROR                      = 1;
  ENCLAVE_ERROR_CLUSTER_NOT_INITIALIZED_ERROR      = 2;
  ENCLAVE_ERROR_CLUSTER_ALREADY_INITIALIZED_ERROR  = 3;
  ENCLAVE_ERROR_SEED_CANNOT_PROCESS_REQUEST_ERROR  = 4;
  ENCLAVE_ERROR_INVALID_REQUEST_ERROR              = 5;
  ENCLAVE_ERROR_INVALID_SIGNATURE_ERROR            = 6;
  ENCLAVE_ERROR_INVALID_ACCOUNT_ERROR              = 7;
  ENCLAVE_ERROR_WALLET_GENERATION_ERROR            = 8;
  ENCLAVE_ERROR_INVALID_PARAMETER_ERROR            = 9;
  ENCLAVE_ERROR_INVALID_ATTESTATION_DOCUMENT_ERROR = 10;
  ENCLAVE_ERROR_ENCLAVE_CRYPTO_ERROR               = 11;
  ENCLAVE_ERROR_INVALID_CLUSTER_PUBLIC_KEY_ERROR   = 12;
  ENCLAVE_ERROR_PROTOBUF_ENCODE_ERROR              = 13;
  ENCLAVE_ERROR_PROTOBUF_DECODE_ERROR              = 14;
  ENCLAVE_ERROR_RESPONSE_PROTOBUF_DECODE_ERROR     = 15;
  ENCLAVE_ERROR_POSTCARD_ERROR                     = 16;
  ENCLAVE_ERROR_LOG_ERROR                          = 17;
  ENCLAVE_ERROR_IO_ERROR                           = 18;
  ENCLAVE_ERROR_ANYHOW_ERROR                       = 19;
  ENCLAVE_ERROR_SERDE_JSON_ERROR                   = 20;  
  ENCLAVE_ERROR_NSM_API_ERROR                      = 21;
  ENCLAVE_ERROR_ATTESTATION_ERROR                  = 22;
  ENCLAVE_ERROR_VSOCK_CLIENT_ERROR                 = 23;
}

enum EnclaveAgentError {
  ENCLAVE_AGENT_ERROR_UNSPECIFIED            = 0;
  ENCLAVE_AGENT_ERROR_UNKNOWN_ERROR          = 1;
  ENCLAVE_AGENT_ERROR_INVALID_REQUEST_ERROR  = 2;
  ENCLAVE_AGENT_ERROR_START_ENCLAVE_ERROR    = 3;
  ENCLAVE_AGENT_ERROR_STOP_ENCLAVE_ERROR     = 4;
  ENCLAVE_AGENT_ERROR_DESCRIBE_ENCLAVE_ERROR = 5;
  ENCLAVE_AGENT_ERROR_IO_ERROR               = 6;
  ENCLAVE_AGENT_ERROR_SERDE_JSON_ERROR       = 7;
  ENCLAVE_AGENT_ERROR_RESPONSE_DECODE_ERROR  = 8;
  ENCLAVE_AGENT_ERROR_VSOCK_CLIENT_ERROR     = 9;
}

enum CoordinatorError {
  Coordinator_ERROR_UNSPECIFIED               = 0;
  Coordinator_ERROR_UNKNOWN_ERROR             = 1;
  Coordinator_ERROR_INVALID_REQUEST_ERROR     = 2;
  COORDINATOR_ERROR_NO_WORKER_AVAILABLE_ERROR = 3;
  COORDINATOR_ERROR_NOT_READY_ERROR           = 4;
}
