syntax = "proto3";

package vaultron.v1;

import "vaultron/attestation/v1/document.proto";
import "vaultron/internal/v1/ping.proto";
import "vaultron/internal/v1/key.proto";
import "vaultron/cluster/v1/wallet.proto";

message StatusCode {
  bool            success       = 1;
  optional string error_message = 2; 
  oneof error {
    EnclaveProtoError  enclave  = 3;
  }
}

enum EnclaveProtoError {
  ENCLAVE_ERROR_UNSPECIFIED                        = 0;
  ENCLAVE_ERROR_UNKNOWN_ERROR                      = 1;
  ENCLAVE_ERROR_CLUSTER_NOT_INITIALIZED            = 2;
  ENCLAVE_ERROR_CLUSTER_ALREADY_INITIALIZED        = 3;
  ENCLAVE_ERROR_INVALID_REQUEST_ERROR              = 4;
  ENCLAVE_ERROR_INVALID_SIGNATURE_ERROR            = 5;
  ENCLAVE_ERROR_INVALID_ACCOUNT_ERROR              = 6;
  ENCLAVE_ERROR_WALLET_GENERATION_ERROR            = 7;
  ENCLAVE_ERROR_INVALID_PARAMETER_ERROR            = 8;
  ENCLAVE_ERROR_INVALID_ATTESTATION_DOCUMENT_ERROR = 9;
  ENCLAVE_ERROR_ENCLAVE_CRYPTO_ERROR               = 10;
  ENCLAVE_ERROR_INVALID_CLUSTER_PUBLIC_KEY_ERROR   = 11;
  ENCLAVE_ERROR_PROTOBUF_ENCODE_ERROR              = 12;
  ENCLAVE_ERROR_PROTOBUF_DECODE_ERROR              = 13;
  ENCLAVE_ERROR_POSTCARD_ERROR                     = 14;
  ENCLAVE_ERROR_LOG_ERROR                          = 15;
  ENCLAVE_ERROR_IO_ERROR                           = 16;
  ENCLAVE_ERROR_ANYHOW_ERROR                       = 17;
  ENCLAVE_ERROR_SERDE_JSON_ERROR                   = 18;  
  ENCLAVE_ERROR_NSM_API_ERROR                      = 19;
  ENCLAVE_ERROR_ATTESTATION_ERROR                  = 20;
}

message EnclaveResponsePadding{}

message EnclaveResponse {
  StatusCode code                 = 1;
  bytes      attestation_document = 2;
}
